src/objects/FourPlanning_zona_objetivo__c.object
<CustomObject>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FourPlanning zonas objetivo</relationshipLabel>
        <relationshipName>FourPlanning_zonas_objetivo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zona_Objetivo_valor_1_eje_x__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Zona Objetivo valor 1 eje x</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zona_Objetivo_valor_2_eje_x__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Zona Objetivo valor 2 eje x</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>altura_zona_objetivo_maxima__c</fullName>
        <defaultValue>0</defaultValue>
        <label>altura zona objetivo maxima</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>altura_zona_objetivo_minima__c</fullName>
        <defaultValue>0</defaultValue>
        <label>altura zona objetivo minima</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FourPlanning zona objetivo</label>
    <nameField>
        <label>Nombre de FourPlanning zona objetivo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FourPlanning zonas objetivo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>